add_subdirectory(types)
add_subdirectory(instructionset)
add_subdirectory(virtualmachine)
add_subdirectory(debugger)
add_subdirectory(assembler)
add_subdirectory(tests)

add_library(Types_obj Types.cpp)
add_library(LoadFile_obj LoadFile.cpp)
add_library(Bytecode_obj Bytecode.cpp)
add_library(InstructionSet_obj InstructionSet.cpp)
add_library(RAM_obj RAM.cpp)
add_library(Registers_obj Registers.cpp)
add_library(Stream_obj Stream.cpp)
add_library(Transform_obj Transform.cpp)
add_library(Validator_obj Validator.cpp)
add_library(VirtualMachine_obj VirtualMachine.cpp)
add_library(Debugger_obj Debugger.cpp)
add_library(BST_obj BST.cpp)
add_library(Assembler_obj Assembler.cpp)
add_library(ValidateASM_obj ValidateASM.cpp)
add_library(SymbolRepository_obj SymbolRepository.cpp)
add_library(BytecodeFromASM_obj BytecodeFromASM.cpp)
add_library(Console_obj Console.cpp)
add_library(DebugPrinter_obj DebugPrinter.cpp)

add_executable(main main.cpp)
#
target_link_libraries(main Byte_obj)
target_link_libraries(main Word_obj)
target_link_libraries(main DWord_obj)
target_link_libraries(main QWord_obj)
target_link_libraries(main Float_obj)
target_link_libraries(main Types_obj)
# tests
target_link_libraries(main transform_test_obj)
#
target_link_libraries(main VirtualMachine_obj)
# virtualmachine
target_link_libraries(main validatebytecode_obj)
#
target_link_libraries(main Validator_obj)
target_link_libraries(main Bytecode_obj)
target_link_libraries(main LoadFile_obj)
target_link_libraries(main Debugger_obj)
target_link_libraries(main DebugPrinter_obj)
target_link_libraries(main RAM_obj)
target_link_libraries(main Stream_obj)
target_link_libraries(main Registers_obj)
target_link_libraries(main BST_obj)
target_link_libraries(main Assembler_obj)
# instructionset
target_link_libraries(main bitwise_obj)
target_link_libraries(main dblmath_obj)
target_link_libraries(main fltmath_obj)
target_link_libraries(main intmath_obj)
target_link_libraries(main jump_obj)
target_link_libraries(main load_obj)
target_link_libraries(main move_obj)
target_link_libraries(main pushpop_obj)
target_link_libraries(main shift_obj)
target_link_libraries(main store_obj)
target_link_libraries(main interrupt_obj)
target_link_libraries(main handleFileIO_obj)
target_link_libraries(main handleNativeCall_obj)
target_link_libraries(main handleTimeDate_obj)
target_link_libraries(main handleCommandLine_obj)
target_link_libraries(main handleMemoryDiagnostics_obj)
# debugger
target_link_libraries(main instruction_obj)
# assembler
target_link_libraries(main identifyTokens_obj)
target_link_libraries(main loadASM_obj)
target_link_libraries(main ValidateASM_obj)
target_link_libraries(main SymbolRepository_obj)
target_link_libraries(main BytecodeFromASM_obj)
target_link_libraries(main Transform_obj)
target_link_libraries(main InstructionSet_obj)
target_link_libraries(main Console_obj)

target_include_directories(main PUBLIC types)
