add_library(bitwise_obj bitwise.cpp)
add_library(dblmath_obj dblmath.cpp)
add_library(fltmath_obj fltmath.cpp)
add_library(interrupt_obj interrupt.cpp)
add_library(intmath_obj intmath.cpp)
add_library(jump_obj jump.cpp)
add_library(load_obj load.cpp)
add_library(move_obj move.cpp)
add_library(pushpop_obj pushpop.cpp)
add_library(shift_obj shift.cpp)
add_library(store_obj store.cpp)

target_include_directories(bitwise_obj PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(dblmath_obj PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(fltmath_obj PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(interrupt_obj PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(intmath_obj PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(jump_obj PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(load_obj PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(move_obj PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(pushpop_obj PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(shift_obj PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(store_obj PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
